--- a/components/Hero2/Hero2.scss
+++ b/components/Hero2/Hero2.scss
@@ -1,4 +1,5 @@
 @import '~assets/scss/variables';
+@import '~assets/scss/breakpoints';
 
 .CHero2 {
 	position: relative;
@@ -41,6 +42,10 @@
 			display: block;
 			color: #fff;
 			margin-bottom: 0;
+
+			@include media('<=tablet') {
+				font-size: 4rem;
+			}
 			
 			span {
 				display: block;
