--- a/assets/scss/_typo.scss
+++ b/assets/scss/_typo.scss
@@ -1,3 +1,4 @@
+@import './breakpoints';
 @import './variables';
 
 body {
@@ -29,7 +30,7 @@ h1,
 }
 h2,
 .h2 {
-	font-size: 3.6rem;
+	font-size: 3rem;
 	font-weight: 400;
 	margin-bottom: 2rem;
 }
@@ -42,9 +43,13 @@ h3,
 
 h4,
 .h4 {
-	font-size: 2rem;
+	font-size: 1.8rem;
 	font-weight: 300;
 	margin-bottom: 1.6rem;
+
+	@include media('>tablet') {
+		font-size: 2rem
+	}
 }
 h5,
 .h5 {
@@ -57,10 +62,14 @@ h6,
 
 p,
 a {
-	font-size: 1.6rem;
+	font-size: 1.3rem;
 	margin: 0;
 	margin-bottom: 1.6rem;
 	line-height: 1.5;
+	
+	@include media('>tablet') {
+		font-size: 1.6rem
+	}
 }
 
 p{
@@ -77,13 +86,17 @@ a {
 .sectionHeading {
 	color: $offblack;
 	display: inline-block;
-	font-size: 6rem;
+	font-size: 4rem;
 	font-weight: 700;
 	letter-spacing: 0px;
 	line-height: 1.3;
 	margin: 0 auto;
 	text-align: center;
 	width: 100%;
+
+	@include media('>tablet') {
+		font-size: 6rem;
+	}
 
 	&.white{
 		color: white;
