--- a/components/AboutMe/AboutMe.scss
+++ b/components/AboutMe/AboutMe.scss
@@ -1,4 +1,6 @@
 @import '~assets/scss/variables';
+@import '~assets/scss/breakpoints';
+
 .CAboutMe {
 	position: relative;
 	background-color: #FFF;
@@ -7,16 +9,27 @@
 		position: relative;
 		width: 100%;
 		height: 100%;
-		min-height: 64rem;
+		min-height: 44rem;
+		
+		@include media('>tablet') {
+			min-height: 64rem;
+		}
+
 		.bg-img {
 			position: absolute;
 			right: 0;
 			top: 0;
-			width: 45%;
-			height: 55%;
+			width: 65%;
+			height: 70%;
 			object-fit: cover;
 			background-color: $primary-color;
+			
+			@include media('>tablet') {
+				width: 45%;
+				height: 55%;
+			}
 		}
+
 		.about-me-slider {
 			bottom: 0;
 			height: 80%;
@@ -87,6 +100,11 @@
 		flex-direction: column;
 		justify-content: center;
 		height: 100%;
+		margin-top: 3.2rem;
+
+		@include media('>tablet') {
+			margin-top: 0;
+		}
 
 		.about-me {
 			font-family: 'Oswald', sans-serif;
