feat: second commit

--- a/assets/scss/_utils.scss
+++ b/assets/scss/_utils.scss
@@ -6,32 +6,10 @@
 	position: absolute;
 }
 
-.mb-5 {
-	margin-bottom: 4rem;
+.d-block {
+	display: block;
 }
 
-.mb-10{
-	margin-bottom: 6.4rem !important;
+.text-center {
+	text-align: center;
 }
-
-.mb-11{
-	margin-bottom: 7.2rem !important;
-}
-
-.mb-12{
-	margin-bottom: 8rem !important;
-}
-
-
-.pt-10{
-	padding-top: 6.4rem !important;
-}
-
-.pt-11{
-	padding-top: 7.2rem !important;
-}
-
-.pt-12{
-	padding-top: 8rem !important;
-}
-
