--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -7,6 +7,7 @@ $offblack:     #323232;
 $turquoise:    #0596a1;
 $yellow:       #dbd527;
 $green:        #9cc11a;
+$red:          #E2532F;
 
 
 $primary-color:   $turquoise;
