--- a/assets/scss/_breakpoints.scss
+++ b/assets/scss/_breakpoints.scss
@@ -29,7 +29,8 @@
 ///  $breakpoints: ('phone': 320px);
 ///
 $breakpoints: (
-	'phone': 375px,
+	'phone': 376px,
+	'phone-lg': 480px,
 	'tablet': 768px,
 	'desktop': 992px,
 	'desktop-lg': 1200px
