--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -14,6 +14,10 @@
 	cursor: pointer;
 	text-transform: uppercase;
 
+	@include media('<=tablet') {
+		padding: 1.5rem 1.8rem;
+	}
+
 	&::before {
 		content: '';
 		position: absolute;
@@ -24,6 +28,11 @@
 		width: 56px;
 		height: 56px;
 		transition: all 0.3s ease;
+
+		@include media('<=tablet') {
+			width: 48px;
+			height: 48px;
+		}
 	}
 
 	&-white {
@@ -79,6 +88,10 @@
 		line-height: 18px;
 		letter-spacing: 0.1em;
 		vertical-align: middle;
+
+		@include media('<=tablet') {
+			font-size: 1.4rem;
+		}
 
 		&.icon {
 			margin-left: 1rem;
