--- a/assets/scss/_typo.scss
+++ b/assets/scss/_typo.scss
@@ -27,6 +27,10 @@ h1,
 	font-weight: 800;
 	letter-spacing: 0.2rem;
 	margin-bottom: 2.4rem;
+
+	@include media('<=tablet') {
+		font-size: 3.6rem;
+	}
 }
 h2,
 .h2 {
@@ -39,6 +43,10 @@ h3,
 	font-size: 2.8rem;
 	font-weight: 400;
 	margin-bottom: 1.6rem;
+
+	@include media('<=tablet') {
+		line-height: 1.3;
+	}
 }
 
 h4,
@@ -48,7 +56,7 @@ h4,
 	margin-bottom: 1.6rem;
 
 	@include media('>tablet') {
-		font-size: 2rem
+		font-size: 2rem;
 	}
 }
 h5,
@@ -62,18 +70,19 @@ h6,
 
 p,
 a {
-	font-size: 1.3rem;
+	font-size: 1.4rem;
 	margin: 0;
 	margin-bottom: 1.6rem;
 	line-height: 1.5;
-	
+	color: $offblack;
+
 	@include media('>tablet') {
-		font-size: 1.6rem
+		font-size: 1.6rem;
 	}
 }
 
-p{
-	a{
+p {
+	a {
 		color: $primary-color;
 	}
 }
@@ -85,77 +94,38 @@ a {
 
 .sectionHeading {
 	color: $offblack;
-	display: inline-block;
+	display: flex;
+	width: fit-content;
 	font-size: 4rem;
 	font-weight: 700;
 	letter-spacing: 0px;
 	line-height: 1.3;
 	margin: 0 auto;
-	text-align: center;
-	width: 100%;
+	margin-bottom: 6.4rem;
 
 	@include media('>tablet') {
 		font-size: 6rem;
 	}
 
-	&.white{
+	&.white {
 		color: white;
 	}
 }
 
-.marker {
-	position: relative;
+.underline {
+	padding-right: 0.4em;
+	box-shadow: inset 0 -0.5em 0 #dbdbdb;
 
-	&:hover {
-		span {
-			&::before {
-				opacity: 1;
-				transition: all 1s;
-			}
-		}
+	&-black {
+		box-shadow: inset 0 -0.5em 0 $offblack;
 	}
-
-	span {
-		position: relative;
-		overflow: hidden;
-		border-radius: 2px;
-
-		&:before {
-			opacity: 0;
-			position: absolute;
-			content: '';
-			left: 0;
-			right: 0;
-			top: 0;
-			bottom: 0;
-			background: rgba(9, 76, 98, .1);
-			transition: all 1.5s;
-		}
-
-		&:first-child {
-			padding-left: 4px;
-		}
-
-		&:last-child {
-			padding-right: 6px;
-		}
-
-		&:nth-child(odd) {
-			padding-top: 3px;
-		}
-
-		&:nth-child(2n) {
-			padding-bottom: 1px;
-		}
-
-		&:nth-child(3n) {
-			padding-bottom: 3px;
-			border-radius: 0 0 2px 2px;
-		}
-
-		&:nth-child(3n) {
-			padding-top: 4px;
-			border-radius: 2px 2px 0 0;
-		}
+	&-primary {
+		box-shadow: inset 0 -0.5em 0 $primary-color;
+	}
+	&-secondary {
+		box-shadow: inset 0 -0.5em 0 $secondary-color;
+	}
+	&-third {
+		box-shadow: inset 0 -0.5em 0 $third-color;
 	}
 }
