--- a/components/AboutMe/AboutMe.scss
+++ b/components/AboutMe/AboutMe.scss
@@ -62,10 +62,20 @@
 				width: auto;
 				z-index: 9;
 
+				@include media('<=tablet') {
+					padding: 0.8rem;
+				}
+
 				div[class^='icon-'] {
+					display: flex;
+					align-items: center;
 					font-size: 2.6rem;
 					transition: all 0.3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 					cursor: pointer;
+
+					@include media('<=tablet') {
+						font-size: 2rem;
+					}
 
 					&::before {
 						position: relative;
@@ -90,6 +100,10 @@
 						font-weight: 300;
 						font-size: 1.8rem;
 						margin: 0 0.4rem;
+
+						@include media('<=tablet') {
+							font-size: 1.6rem;
+						}
 					}
 				}
 			}
@@ -119,6 +133,10 @@
 			font-weight: 600;
 			color: $offblack;
 			margin-bottom: 4rem;
+
+			@include media('<=tablet') {
+				margin-bottom: 3.2rem;
+			}
 		}
 
 		.about-me-text {
@@ -136,40 +154,97 @@
 	}
 	.skill-content {
 		padding: 4.8rem 0;
-		padding-left: 2.4rem;
+		max-width: 100%;
+		display: grid;
+		grid-template-columns: 1.5fr repeat(4, 1fr);
+
+		@include media('<=tablet') {
+			padding: 3.2rem 0;
+			grid-template-columns: repeat(3, 1fr);
+			grid-template-rows: 1fr 1fr;
+		}
+
+		@include media('<=phone-lg') {
+			padding: 0;
+			grid-template-columns: repeat(2, 1fr);
+			grid-template-rows: 1fr 1fr;
+		}
+
+		.skill-topic-wrapper {
+			display: flex;
+			align-items: center;
+
+			.skill-topic {
+				margin-bottom: 0;
+			}
+		}
+		
 		.skill-wrapper {
-			width: 100%;
-			margin-top: 2.4rem;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			padding: 1.6rem;
 
-			&:first-of-type {
-				margin-top: 0;
+			&.d-none {
+				@include media('<=tablet') {
+					display: none;
+				}
 			}
 
-			.skill-top {
-				display: flex;
-				justify-content: space-between;
-				width: 100%;
-				p {
-					display: inline-flex;
+			.skill-title {
+				font-size: 2.4rem;
+				text-align: center;
+				margin-bottom: 0;
+
+				@include media('<=phone-lg') {
+					font-size: 2rem;
 				}
 			}
-			.skill-bottom {
-				display: flex;
-				width: 100%;
-				margin-top: 1.6rem;
-				.skill-bar {
-					position: relative;
-					width: 100%;
-					height: 0.2rem;
-					background-color: lightgray;
-				}
-				.skill-bar-progress {
-					content: '';
-					position: absolute;
-					height: 100%;
-					background-color: $yellow;
+
+			.skill-img {
+				height: 7.5rem;
+				max-width: 100%;
+
+				@include media('<=tablet') {
+					height: 5rem
 				}
 			}
+		}
+
+		.cy-logo {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			font-weight: 900;
+			font-size: 5.2rem;
+			color: white;
+			position: relative;
+			z-index: 1;
+			transform: translateY(-5px);
+
+			@include media('<=phone-lg') {
+				font-size: 3.5rem;
+				margin-bottom: 0;
+			}
+			
+			&::before {
+				display: block;
+				position: absolute;
+				content: '';
+				height: 7.5rem;
+				width: 7.5rem;
+				border-radius: 50%;
+				background-color: #000;
+				transform: translateY(5px);
+				z-index: -1;
+
+				@include media('<=phone-lg') {
+					width: 5rem;
+					height: 5rem;
+				}
+
+			}
+
 		}
 	}
 	.bgPattern {
