--- a/components/Contact/Contact.scss
+++ b/components/Contact/Contact.scss
@@ -33,13 +33,7 @@
       align-items: center;
       position: relative;
       background: var(--background);
-      border: 1px solid var(--border-default);
-      transition: box-shadow 0.2s;
-      &:focus-within {
-        --border-width: 1.5px;
-        --border: var(--border-active);
-        --shadow: var(--shadow-active);
-      }
+
       .text {
         flex-grow: 1;
         input,
@@ -57,23 +51,16 @@
           font-size: 16px;
           font-weight: 500;
           color: var(--text-color);
+
           &::placeholder {
             color: var(--placeholder-color);
             transition: color 0.2s;
           }
-          &::focus {
-            background-color: red;
+
+          &.error {
+            box-shadow:  inset 0 0 0.5rem $red;
           }
         }
-        input:-webkit-autofill,
-        input:-webkit-autofill:hover,
-        input:-webkit-autofill:focus,
-        input:-webkit-autofill:active {
-          -webkit-box-shadow: 0 0 0 30px white inset !important;
-        }
-		input:-internal-autofill-selected {
-			color: red !important;
-		}
         textarea {
           resize: none;
           overflow: auto;
@@ -88,6 +75,13 @@
           }
         }
       }
+    }
+
+    .text-error {
+      color: $red;
+      display: inline-block;
+      font-size: 1.3rem;
+      margin-top: 0.4rem;
     }
 
     .send-wrapper {
