--- a/components/Divider/Divider.scss
+++ b/components/Divider/Divider.scss
@@ -1,4 +1,5 @@
 @import '~assets/scss/variables';
+@import '~assets/scss/breakpoints';
 
 .CDivider {
 	background-color: $offblack;
@@ -10,6 +11,14 @@
 
 		.codesuitLogo {
 			width: 50%;
+			
+			@include media('<=tablet') {
+				width: 25%
+			}
+
+			@include media('<=phone') {
+				width: 40%
+			}
 		}
 
 		.mrLogo {
