--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -7,6 +7,10 @@ header {
 	width: 100%;
 	z-index: 10;
 
+	@include media('<=tablet') {
+		padding: 1.2em 0;
+	}
+
 	> .container {
 		position: static;
 	}
@@ -16,6 +20,11 @@ header {
 		justify-content: space-between;
 		margin-bottom: 1.6rem;
 		color: #fff;
+
+		@include media('<=tablet') {
+			margin-bottom: 0;
+		}
+
 		.iconWrapper {
 			display: flex;
 			align-items: center;
@@ -47,7 +56,7 @@ header {
 			margin-bottom: 0;
 
 			@include media('<=tablet') {
-				margin-right: 0.8rem;
+				margin-right: 0.4rem;
 			}
 
 			&:hover {
@@ -269,6 +278,11 @@ header {
 					align-items: center;
 					justify-content: center;
 					margin-bottom: 8rem;
+
+					@include media('<=tablet') {
+						margin-bottom: 4rem;
+					}
+
 					.menu-item {
 						margin-bottom: 4rem;
 						margin-right: 0;
