--- a/components/Hero2/Hero2.scss
+++ b/components/Hero2/Hero2.scss
@@ -38,13 +38,27 @@
 	.infoBox {
 		background-color: $secondary-color;
 		padding: 4.8rem 3.2rem;
+
+		@include media('<=tablet') {
+			padding: 3.2rem 2.4rem;
+		}
+
 		h1.title {
 			display: block;
 			color: #fff;
 			margin-bottom: 0;
 
-			@include media('<=tablet') {
+			@include media('<=desktop-lg') {
 				font-size: 4rem;
+			}
+
+			@include media('<=tablet') {
+				font-size: 3.2rem;
+			}
+
+			@include media('<=phone') {
+				font-size: 2.6rem;
+				letter-spacing: 0.5px;
 			}
 			
 			span {
