--- a/assets/scss/_typo.scss
+++ b/assets/scss/_typo.scss
@@ -28,6 +28,10 @@ h1,
 	letter-spacing: 0.2rem;
 	margin-bottom: 2.4rem;
 
+	@include media('<=desktop-lg') {
+		font-size: 4.0rem;
+	}
+
 	@include media('<=tablet') {
 		font-size: 3.6rem;
 	}
