--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -23,6 +23,7 @@ header {
 
 		@include media('<=tablet') {
 			margin-bottom: 0;
+			margin-top: 8px;
 		}
 
 		.iconWrapper {
@@ -37,10 +38,6 @@ header {
 			span {
 				font-size: 1.4rem;
 				font-weight: 700;
-
-				@include media('<=tablet') {
-					font-size: 1.1rem;
-				}
 			}
 		}
 	}
@@ -212,15 +209,11 @@ header {
 		right: -100%;
 		width: 100%;
 		height: 100vh;
-		padding: 8rem;
+		padding: 3.2rem;
 		z-index: 1000;
 		background-color: $offblack;
 		-webkit-backface-visibility: hidden;
 		transition: all 1s cubic-bezier(0.215, 0.61, 0.355, 1);
-
-		@include media('<=tablet') {
-			padding: 3.2rem;
-		}
 
 		&.isOpen {
 			right: 0;
@@ -238,7 +231,7 @@ header {
 			align-items: center;
 			position: relative;
 			width: 100%;
-			padding: 8rem;
+			padding: 0 8rem;
 
 			@include media('<=tablet') {
 				padding: 3.2rem;
@@ -260,7 +253,7 @@ header {
 			.icon-codesuit {
 				width: 12rem;
 				margin: 0 1.2rem;
-				margin-bottom: 8rem;
+				margin-bottom: 4rem;
 				height: unset;
 
 				@include media('<=tablet') {
@@ -277,7 +270,7 @@ header {
 					flex-direction: column;
 					align-items: center;
 					justify-content: center;
-					margin-bottom: 8rem;
+					margin-bottom: 6rem;
 
 					@include media('<=tablet') {
 						margin-bottom: 4rem;
